--- a/app/src/main/res/layout-sw600dp/activity_bmiresults.xml
+++ b/app/src/main/res/layout-sw600dp/activity_bmiresults.xml
@@ -33,7 +33,7 @@
         android:layout_marginStart="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text=""
         android:textColor="@color/orange"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/yourWeightText"
@@ -45,11 +45,31 @@
         android:layout_marginStart="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text=""
         android:textColor="@color/orange"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/yourHeightText"
         app:layout_constraintTop_toBottomOf="@+id/weightText" />
+
+    <TextView
+        android:id="@+id/weightUOMText"
+        android:layout_marginTop="100dp"
+        android:layout_marginStart="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        app:layout_constraintStart_toEndOf="@id/weightText"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <TextView
+        android:id="@+id/heightOUMText"
+        android:layout_marginTop="30dp"
+        android:layout_marginStart="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        app:layout_constraintTop_toBottomOf="@id/weightUOMText"
+        app:layout_constraintStart_toEndOf="@id/heightText"/>
 
     <TextView
         android:id="@+id/yourBMIText"
@@ -67,7 +87,7 @@
         android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text=""
         android:textColor="@color/orange"
         android:textStyle="bold"
         android:textSize="20sp"
@@ -82,10 +102,10 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="40dp"
-        android:layout_marginStart="200dp"
-        android:layout_marginEnd="200dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginEnd="100dp"
         android:background="@color/healthy_weight"
-        android:text="TextView"
+        android:text=""
         android:textAlignment="center"
         android:textSize="35sp"
         android:textColor="@color/white"
