--- a/app/src/main/res/layout/activity_bmiresults.xml
+++ b/app/src/main/res/layout/activity_bmiresults.xml
@@ -6,6 +6,34 @@
     android:layout_height="match_parent"
     tools:context=".BMIResults">
 
+    <Button
+        android:id="@+id/decreaseSizeBtn"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="92dp"
+        android:layout_marginEnd="56dp"
+        android:background="@drawable/circular_buttons"
+        android:text="@string/zoom_out"
+        android:textColor="@color/orange"
+        android:textSize="50sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/BMIStatusText"
+        android:visibility="invisible"/>
+
+    <Button
+        android:id="@+id/increaseSizeBtn"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="92dp"
+        android:background="@drawable/circular_buttons"
+        android:text="@string/zoom_in"
+        android:textColor="@color/orange"
+        android:textSize="50sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/BMIStatusText"
+        android:visibility="invisible"/>
+
     <TextView
         android:id="@+id/yourWeightText"
         android:layout_width="wrap_content"
